--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "use-media": "^1.4.0"
   },
   "scripts": {
-    "start": "PORT=4202 react-scripts start",
+    "start": "PORT=4202 NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
