--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,11 +13,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    #  本地编译Build完push
     #- name: Set up Node.js
     #  uses: actions/setup-node@v2
     #  with:
     #    node-version: '18'  # 或者你的项目所需的 Node.js 版本
-
+    
     #- name: Install dependencies
     #  run: yarn install
 
