--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    #  本地编译Build完push
+    #  Build后push
     #- name: Set up Node.js
     #  uses: actions/setup-node@v2
     #  with:
